--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,8 @@
         <div id="contentWrap">
 
             <div id="userDisplay">
-                <b>Users:</b>
+                <b>Users online:</b>
                 <div id="users"></div>
-                <b>Rooms:</b>
-                <div id="rooms"></div>
             </div>
 
             <div id="chatWrap">
